# Smart-Scholarship

./: ADMIN_USER_README.rtf
server/: Cargo.toml  database.db
server/src/: main.rs
